Add ConversionResultTest, few other test fixes