@@ -19,6 +19,7 @@
         <extra-jvm-options-when-running-tests>
             --add-opens pl.marcinchwedczuk.javafx.validation/pl.marcinchwedczuk.javafx.validation=ALL-UNNAMED
             --add-opens pl.marcinchwedczuk.javafx.validation/pl.marcinchwedczuk.javafx.validation.converters=ALL-UNNAMED
+            --add-opens pl.marcinchwedczuk.javafx.validation/pl.marcinchwedczuk.javafx.validation.impl=ALL-UNNAMED
         </extra-jvm-options-when-running-tests>
     </properties>
 
